@@ -1,3 +1,10 @@
+2008-04-28  Srinivasa Ragavan  <sragavan@novell.com>
+
+	** Fix for BNC bug #382687
+
+	* plugins/itip-formatter/itip-formatter.c: Don't download contents in
+	main thread, which causes deadlock
+
 2008-03-27  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #523541
